--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,485 @@
-.App {
+ 
+body {
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
+  background: linear-gradient(to right, #fff4e6, #f5d9b3);
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 50px;
+background: linear-gradient(135deg, antiquewhite, #f2d9c2);
+  position: fixed;
+  max-width: 100%;
+  top: 0;
+  z-index: 10;
+  gap: 400px;
+
+}
+
+.logo {
+  font-size: 28px;
+  font-weight: 700;
+  color: #704214;
+}
+
+nav a {
+  margin: 0 15px;
+  text-decoration: none;
+  color: #704214;
+  font-weight: 500;
+}
+
+.contact-btn {
+  background: #704214;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+.hero {
+  display: flex;
+  align-items: center;
+  padding: 120px 60px;
+  gap: 60px;
+}
+
+.image-wrapper {
+  background: #fff8f0;
+  padding: 20px;
+  border-radius: 50%;
+  box-shadow: 0 0 20px rgba(0,0,0,0.1);
+}
+
+.profile-img {
+  width: 300px;
+  border-radius: 50%;
+}
+
+.hero-right h1 {
+  font-size: 45px;
+  color: #343333;
+}
+
+.highlight {
+  color: #b8860b;
+  font-weight: bold;
+}
+
+.socials {
+  display: flex;
+  gap: 20px;
+  margin: 20px 0;
+}
+
+.socials i {
+  font-size: 24px;
+  color: #704214;
+  transition: 0.3s;
+}
+
+.socials i:hover {
+  color: #b8860b;
+  transform: scale(1.2);
+}
+
+.download-btn {
+  background: #704214;
+  color: white;
+  border: none;
+  padding: 12px 25px;
+  border-radius: 6px;
+  margin-top: 15px;
+}
+
+section {
+  padding: 100px 60px;
+}
+
+
+.footer {
+  text-align: center;
+  padding: 30px;
+  background: #704214;
+  color: white;
+}
+
+.contact-section {
+  max-width: 100vw;
+  padding: 100px 20px;
+  background: linear-gradient(to right, #fff4e6, #f5d9b3); 
+  display: flex;
+  justify-content: center;
+}
+
+.contact-container {
+  max-width: 1200px;
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  gap: 50px;
+}
+
+
+.contact-left {
+  width: 50%;
+}
+
+.contact-label {
+  color: #c7760c;
+  font-weight: 700;
+  margin-bottom: 10px;
+  letter-spacing: 1px;
+}
+
+
+.contact-title {
+  font-size: 45px;
+  font-weight: 500;
+  color: rgb(32, 31, 31);
+  line-height: 1.3;
+  margin-bottom: 20px;
+}
+
+.contact-desc {
+  color: rgb(27, 26, 26);
+  line-height: 1.7;
+  margin-bottom: 30px;
+}
+
+
+.contact-socials {
+  display: flex;
+  gap: 18px;
+}
+
+.contact-socials a {
+  width: 42px;
+  height: 42px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #ffffff;
+  border-radius: 50%;
+  font-size: 20px;
+  color: #2b1463;
+  transition: 0.3s;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+}
+
+.contact-socials a:hover {
+  transform: translateY(-5px);
+}
+
+
+.contact-card {
+  height: 700px;
+  width: 50%;
+  background: #fdf8f8;
+  padding: 40px;
+  border-radius: 20px;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+}
+
+.form-row {
+  display: flex;
+  gap: 20px;
+}
+
+.form-row div {
+  width: 100%;
+}
+
+label {
+  font-size: 14px;
+  color: #131212;
+  margin-bottom: 4px;
+  display: block;
+}
+
+input,
+textarea {
+  width: 100%;
+  padding: 8px;
+  border-radius: 12px;
+  border: 1px solid #ddd;
+  font-size: 16px;
+  outline: none;
+  transition: 0.3s;
+  background: #f7faff;
+}
+
+input:focus,
+textarea:focus {
+  border-color: #7a42f4;
+  box-shadow: 0 0 6px rgba(122, 66, 244, 0.3);
+}
+
+.submit-btn {
+  padding: 14px;
+  border-radius: 12px;
+  border: none;
+  background:#704214; 
+  color: white;
+  font-size: 17px;
+  cursor: pointer;
+  margin-top: 10px;
+  transition: 0.3s;
+}
+
+.submit-btn:hover {
+  opacity: 0.9;
+}
+
+
+.projects {
+  padding: 80px 40px;
+  text-align: center;
+  background: linear-gradient(to right, #fff4e6, #f5d9b3);;
+}
+
+.projects-title {
+  font-size: 48px;
+  font-weight: 700;
+  margin-bottom: 10px;
+  color: rgb(15, 14, 14);
+}
+
+.projects-subtitle {
+  max-width: 600px;
+  margin: 0 auto 50px;
+  color:rgb(27, 27, 27);
+  font-size: 16px;
+}
+
+.projects-container {
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.project-card {
+  position: relative;
+  width: 300px;
+  height: 450px;
+  border-radius: 25px;
+  overflow: hidden;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.15);
+  background: #000;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.project-card:hover {
+  transform: translateY(-5px);
+}
+
+.project-card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.project-info {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  color: white;
+  text-align: left;
+}
+
+.project-info h3 {
+  font-size: 22px;
+  font-weight: 600;
+  margin-bottom: 5px;
+}
+
+.project-info p {
+  font-size: 14px;
+  max-width: 85%;
+  margin-bottom: 10px;
+  opacity: 0.9;
+}
+
+.tags span {
+  background: rgba(255,255,255,0.2);
+  padding: 6px 12px;
+  border-radius: 20px;
+  font-size: 12px;
+  margin-right: 8px;
+}
+
+
+.skills {
+  background: linear-gradient(to right, #fff4e6, #f5d9b3);;
+  padding: 80px 40px;
+  color: rgb(31, 31, 31);
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.skills-title {
+  font-size: 40px;
+  margin-bottom: 10px;
+  font-weight: 700;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.skills-text {
+  color: #1d1c1c;
+  max-width: 700px;
+  margin: 0 auto 40px;
+  line-height: 1.6;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.skills-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+  gap: 25px;
+  justify-items: center;
+}
+
+.skill-card {
+  background: #1a1a1a;
+  width: 140px;
+  height: 140px;
+  border-radius: 12px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  box-shadow: 0px 8px 20px rgba(0,0,0,0.5);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.App-link {
-  color: #61dafb;
+.skill-card:hover {
+  transform: translateY(-6px);
+  box-shadow: 0px 12px 25px rgba(0,0,0,0.7);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.skill-card img {
+  width: 48px;
+  height: 48px;
+  margin-bottom: 10px;
 }
+
+.skill-card p {
+  font-size: 14px;
+  color: #f2f2f2;
+  font-weight: 500;
+}
+
+.about {
+  background: linear-gradient(to right, #fff4e6, #f5d9b3);;
+  padding: 80px 40px;
+  color: rgb(35, 34, 34);
+}
+
+.about-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 40px;
+  max-width: 1200px;
+  margin: auto;
+}
+
+.about-text {
+  flex: 1;
+  max-width: 600px;
+}
+
+.about-text h2 {
+  font-size: 48px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.sub-heading {
+  font-size: 14px;
+  letter-spacing: 2px;
+  color:#b8860b;
+  margin-bottom: 25px;
+}
+
+.about-text p {
+  line-height: 1.7;
+  margin-bottom: 18px;
+  color: #0d0d0d;
+}
+
+.moral {
+  font-weight: 600;
+  margin-top: 25px;
+  color: #e2c06b;
+}
+
+.chat-btn {
+  background: #e2b44f;
+  border: none;
+  padding: 12px 28px;
+  margin-top: 25px;
+  font-size: 14px;
+  font-weight: 600;
+  cursor: pointer;
+  color: black;
+  border-radius: 4px;
+  transition: 0.3s;
+}
+
+.chat-btn:hover {
+  background: #f5ca68;
+}
+
+.about-image {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+}
+
+.about-image img {
+  width: 100%;
+  max-width: 500px;
+  border-radius: 6px;
+  object-fit: cover;
+  margin-top: 40px;
+} 
+
+
+
+
+.skills-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* 3 per row */
+  gap: 20px;
+  margin-top: 30px;
+}
+
+.skill-card {
+  background: #222020;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  transition: 0.3s ease;
+}
+
+.skill-card img {
+  width: 60px;
+  height: 60px;
+  margin-bottom: 10px;
+}
+
+ 
+
+
