--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ background: linear-gradient(135deg, antiquewhite, #f2d9c2);
 .logo {
   font-size: 28px;
   font-weight: 700;
-  color: #704214;
+  color: #5c350e;
 }
 
 nav a {
@@ -41,6 +41,9 @@ nav a {
   padding: 10px 20px;
   border-radius: 20px;
   cursor: pointer;
+}
+.contact-btn :hover{
+  opacity: 0.9;
 }
 
 .hero {
@@ -485,6 +488,164 @@ textarea:focus {
   height: 60px;
   margin-bottom: 10px;
 }
+
+
+
+
+@media (max-width: 992px) {
+
+  .navbar {
+    padding: 12px 25px;
+    gap: 100px;
+  }
+
+  nav a {
+    margin: 0 10px;
+  }
+
+  .hero {
+    flex-direction: column;
+    text-align: center;
+    padding: 120px 20px;
+  }
+
+  .profile-img {
+    width: 250px;
+  }
+
+  .projects-container {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .about-container {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .about-image img {
+    max-width: 420px;
+  }
+
+  .contact-container {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .contact-left,
+  .contact-card {
+    width: 100%;
+  }
+
+  .form-row {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 768px) {
+
+  .navbar {
+    padding: 12px 20px;
+    gap: 20px;
+  }
+
+  nav {
+    display: none; 
+  }
+
+  .logo {
+    font-size: 22px;
+  }
+
+  .contact-btn {
+    padding: 8px 16px;
+    font-size: 14px;
+  }
+
+  .hero-right h1 {
+    font-size: 32px;
+  }
+
+  .projects-title {
+    font-size: 34px;
+  }
+
+  .projects-subtitle {
+    padding: 0 10px;
+  }
+
+  .project-card {
+    width: 100%;
+    height: 350px;
+  }
+
+  .skills-grid {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
+  }
+
+  .about-text h2 {
+    font-size: 36px;
+  }
+
+  .about-image img {
+    max-width: 350px;
+  }
+
+  .contact-title {
+    font-size: 32px;
+  }
+}
+
+@media (max-width: 480px) {
+
+  .navbar {
+    padding: 10px 15px;
+  }
+
+  .logo {
+    font-size: 20px;
+  }
+
+  .hero {
+    padding: 100px 15px;
+  }
+
+  .profile-img {
+    width: 200px;
+  }
+
+  .hero-right h1 {
+    font-size: 28px;
+  }
+
+  .skill-card {
+    width: 120px;
+    height: 120px;
+  }
+
+  .projects-title {
+    font-size: 28px;
+  }
+
+  .about-text h2 {
+    font-size: 32px;
+  }
+
+  .contact-card {
+    padding: 25px;
+  }
+
+  .submit-btn {
+    font-size: 15px;
+  }
+}
+
+
+
+
+
 
  
 
